--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           Agende sua consulta
         </button>
         <img id="mulher"
-          src="/assets/foto.svg"
+          src="assets/mulher.png"
           alt="Mulher negra vestindo moletom verde sorrindo."
         />
       </div>
