--- a/index.html
+++ b/index.html
@@ -81,27 +81,33 @@
 
     <section id="home">
       <div class="wrapper">
-      <header>
-        <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
-        <h1>Assistência médica simplificada para todos</h1>
-      </header>
-      <div class="content">
-        <p>
-          Os médicos da DoctorCare vão além dos sintomas para tratar a causa raiz
-          de sua doença e proporcionar uma cura a longo prazo.
-        </p>
-        <a href="https://wa.me/5511983838383" target="_blank" class="button">
-          <button>
-            <img src="assets/botao.svg" alt="">
-            </svg>
-            Agende sua consulta
-          </button>
-        </a>
+      <div class="col-a">
+        <header>
+          <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
+          <h1>Assistência médica simplificada para todos</h1>
+        </header>
+        <div class="content">
+          <p>
+            Os médicos da DoctorCare vão além dos sintomas para tratar a causa raiz
+            de sua doença e proporcionar uma cura a longo prazo.
+          </p>
+          <a href="#" target="_blank" class="button">
+            <button onclick="document.window.webkitRequestFullscreen()">
+              <img src="assets/botao.svg" alt="">
+              </svg>
+              Agende sua consulta
+            </button>
+          </a>
+      </div>
+
+      </div>
+
+      <div class="col-b">
         <img id="mulher"
           src="assets/mulher.png"
           alt="Mulher negra vestindo moletom verde sorrindo."
         />
-      </div>
+    </div>
 
       <div class="dados">
         <h3>+3.500</h3>
@@ -220,7 +226,7 @@
             </button>
           </a>
 
-          <img src="assets/pic 2.png" alt="">
+          <img src="assets/" alt="">
         </div>
       </div>
     </section>
