--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             de sua doença e proporcionar uma cura a longo prazo.
           </p>
           <a href="#" target="_blank" class="button">
-            <button onclick="document.window.webkitRequestFullscreen()">
+            <button id="fs">
               <img src="assets/botao.svg" alt="">
               </svg>
               Agende sua consulta
