--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             Os médicos da DoctorCare vão além dos sintomas para tratar a causa raiz
             de sua doença e proporcionar uma cura a longo prazo.
           </p>
-          <a href="#" target="_blank" class="button">
+          <a href="" target="_blank" class="button">
             <button id="fs">
               <img src="assets/botao.svg" alt="">
               </svg>
